Fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,36 @@ body{
     display: flex;
     flex-direction: column;
     justify-self: center;
+    flex-grow: 1;
+   
     
 
     border-color: green;
     border-style: solid;
-    max-width: 1250px;
-    max-height: 1250px;
+    
+    min-width: 1000px;
+    min-height: 1000px;
 
-    min-width: 960px;
-    min-height: 960px;
+    max-width: 100%;
+    max-height: 100%;
+    
+
+
+   
 }
 
 .row{
     display: flex;
+    min-width: 0;
+    min-height: 0;
     flex-grow: 1;
+
+
+   
+    flex-shrink: 1;
+    
+
+  
 
     
     
@@ -31,14 +47,19 @@ body{
 .sketch{
     display: flex;
     justify-items: center;
-    flex-grow: 1;
+    
+    flex-basis: auto;
 
     /* Align text
     */
     align-items: center;
-    padding: 2%;
+    padding: 0;
 
     color: #DE802B;
+    min-width: 1px;
+    min-height: 1px;
+    flex-grow: 1;
+
     
 
 }
